package br.edu.ifrn.conta.restclient;

import lombok.Data;

@Data
public class ContaCreditoDTO {
    private ContaCreditoEmbedded _embedded;
}
