package br.edu.ifrn.conta.restclient;

import lombok.Data;

@Data
public class ContaDebitoDTO {
    private ContaDebitoEmbedded _embedded;
}
